# bioresearch-ai

./: .gitignore  LICENSE  MASTER_PLAN.md  PROJECT_COMPLETION_AUDIT.md  README.md  ROADMAP.md  WEEK1_FINAL_AUDIT.md  api_client.py  package-lock.json  package.json  render.yaml  tsconfig.json
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml  main.yml
backend/: .env.example  .env.test  .gitignore  Dockerfile  check_chromadb.py  check_db.py  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt  setup_venv.sh  uv
backend/alembic/: env.py  rls_policies.sql
backend/alembic/versions/: 0001_initial.py  0004_phase24_multitenant.py  0005_add_missing_indexes.py  0006_add_owner_team_role.py  0008_phase26.py  0010_research_intelligence.py  0011_drop_subscription_tier.py
backend/app/: main.py
backend/app/api/v1/: api.py  health.py
backend/app/api/v1/endpoints/: alerts.py  analytics.py  auth.py  billing.py  dashboard.py  enrichment.py  export.py  pipelines.py  reports.py  researchers.py  scoring.py  search.py  teams.py  users.py  webhooks.py
backend/app/core/: cache.py  config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  activity.py  admin.py  alert.py  crm.py  export.py  pipeline.py  researcher.py  search.py  team.py  usage.py  user.py
backend/app/schemas/: __init__.py  alert.py  base.py  crm.py  export.py  lead.py  researcher.py  search.py  team.py  usage.py  user.py  webhook.py
backend/app/services/: billing_service.py  company_enricher.py  conference_service.py  contact_service.py  data_quality_service.py  data_source_manager.py  email_finder.py  email_service.py  embedding_service.py  enrichment_service.py  export_service.py  funding_service.py  intelligence_service.py  linkedin_service.py  pipeline_service.py  pubmed_enrichment.py  pubmed_service.py  quota_manager.py  research_area_classifier.py  scoring_service.py  search_service.py  smart_alert_service.py  tier_quota_service.py  usage_service.py  webhook_service.py
backend/app/utils/: formatters.py  logger.py  rate_limiter.py  validators.py
backend/app/workers/: celery_app.py  tasks.py
backend/docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md
backend/ml/: train_scorer.py  tune_scorer.py
backend/ml/reports/: eval_v1.json
backend/scripts/: generate_training_data.py  test_intelligence.py
backend/tests/: conftest.py  test_audit_fixes.py  test_embedding_service.py  test_ml_scoring.py  test_phase26.py  test_teams.py
backend/tests/api/: test_auth.py  test_export.py
backend/tests/integration/: test_phase23_pipeline.py
backend/tests/services/: test_email_finder.py  test_enrichment_service.py  test_pubmed_service.py  test_search_service.py
backend/tests/unit/: test_models.py
biotech-lead-generator/: .gitignore  app.py  generate_icons.py  pyproject.toml
biotech-lead-generator/.github/workflows/: main.yml
biotech-lead-generator/backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pytest.ini  requirements-dev.txt  requirements.txt
biotech-lead-generator/backend/alembic/: env.py
biotech-lead-generator/backend/app/: main.py
biotech-lead-generator/backend/scripts/: create_superuser.py  test_redis.py
biotech-lead-generator/backend/tests/: test_phase25.py
biotech-lead-generator/chrome-extension/: api.js  background.js  content.js
biotech-lead-generator/frontend/: .env.example  .prettierrc  SETUP.md  package.json  tsconfig.json
biotech-lead-generator/frontend/src/: middleware.ts
biotech-lead-generator/src/utils/: data_validator.py  google_sheets_exporter.py
chrome-extension/: manifest.json  popup.html  popup.js
frontend/: .env.example  .gitignore  README.md  SETUP.md  eslint.config.mjs  netlify.toml  next.config.js  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: use-auth.ts  (+7 more)
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/data_sources/: conference_scraper.py  funding_scraper.py  pubmed_scraper.py
src/hooks/: use-auth.ts  use-researchers.ts  use-scoring.ts
src/providers/: query-provider.tsx
src/scoring/: propensity_scorer.py
src/stores/: auth-store.ts
src/types/: auth.ts  researcher.ts
src/utils/: export_helper.py
(+216 files in other folders)
