[project]
name = "bioresearch-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiohttp==3.9.1",
    "aiosignal==1.4.0",
    "alembic==1.13.1",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "astroid==3.0.3",
    "asttokens==3.0.1",
    "asyncpg==0.29.0",
    "attrs==25.4.0",
    "babel==2.17.0",
    "bcrypt==4.1.2",
    "beautifulsoup4==4.12.3",
    "biopython==1.83",
    "black==23.12.1",
    "blinker==1.9.0",
    "brotli==1.2.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "configargparse==1.7.1",
    "coverage==7.13.1",
    "cryptography==46.0.3",
    "decorator==5.2.1",
    "deprecated==1.3.1",
    "deprecation==2.1.0",
    "dill==0.4.0",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.1.0",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    "faker==22.0.0",
    "fastapi==0.109.0",
    "flake8==7.0.0",
    "flask==3.1.2",
    "flask-basicauth==0.2.0",
    "flask-cors==6.0.2",
    "frozenlist==1.8.0",
    "gevent==25.9.1",
    "geventhttpclient==2.3.7",
    "ghp-import==2.1.0",
    "gotrue==2.12.4",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hiredis==2.3.2",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.26.0",
    "hyperframe==6.1.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "ipdb==0.13.13",
    "ipython==8.19.0",
    "isort==5.13.2",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "limits==5.6.0",
    "locust==2.20.0",
    "mako==1.3.10",
    "markdown==3.10",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "mccabe==0.7.0",
    "mergedeep==1.3.4",
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.3",
    "mkdocs-material-extensions==1.3.1",
    "msgpack==1.1.2",
    "multidict==6.7.0",
    "mypy==1.8.0",
    "mypy-extensions==1.1.0",
    "numpy==1.26.3",
    "openpyxl==3.1.2",
    "packaging<25",
    "paginate==0.5.7",
    "pandas==2.1.4",
    "parso==0.8.5",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "phonenumbers==8.13.27",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "postgrest==0.16.11",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psutil==7.2.1",
    "psycopg2-binary==2.9.9",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pycodestyle==2.11.1",
    "pycparser==2.23",
    "pydantic==2.5.3",
    "pydantic-core==2.14.6",
    "pydantic-extra-types==2.3.0",
    "pydantic-settings==2.1.0",
    "pyflakes==3.2.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pylint==3.0.3",
    "pymdown-extensions==10.20",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-json-logger==2.0.7",
    "python-multipart==0.0.6",
    "pytz==2023.3",
    "pyyaml==6.0.3",
    "pyyaml-env-tag==1.1",
    "pyzmq==27.1.0",
    "realtime==1.0.6",
    "redis==5.0.1",
    "regex==2025.11.3",
    "requests==2.31.0",
    "roundrobin==0.0.4",
    "rsa==4.9.1",
    "setuptools==80.9.0",
    "six==1.17.0",
    "slowapi==0.1.9",
    "sniffio==1.3.1",
    "soupsieve==2.8.1",
    "sqlalchemy==2.0.25",
    "stack-data==0.6.3",
    "starlette==0.35.1",
    "storage3==0.7.7",
    "strenum==0.4.15",
    "supabase==2.6.0",
    "supafunc==0.5.1",
    "tomlkit==0.13.3",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "upstash-redis==0.15.0",
    "urllib3==2.6.2",
    "uvicorn==0.27.0",
    "uvloop==0.22.1; platform_system != 'Windows'",
    "watchdog==3.0.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websockets==12.0",
    "werkzeug==3.1.4",
    "wrapt==2.0.1",
    "xlsxwriter==3.1.9",
    "yarl==1.22.0",
    "zope-event==6.1",
    "zope-interface==8.1.1",
    "plotly==5.18.0",
    "sentence-transformers==2.7.0",
    "chromadb==0.5.3",
    "xgboost==2.0.3",
    "shap==0.44.1",
    "anthropic>=0.25.0",
]
